--- a/frontend/styles/fonts.css
+++ b/frontend/styles/fonts.css
@@ -5,6 +5,12 @@
 }
 
 @font-face {
+	font-family: 'Classic Grotesque Pro Default';
+	src: url('/fonts/classic-grot.woff2') format('woff2'), url('/fonts/classic-grot.woff') format('woff'), url('/fonts/classic-grot.ttf') format('truetype');
+	font-display: swap;
+}
+
+@font-face {
 	font-family: 'Classic Grotesque Pro Regular';
 	src: url('/fonts/ClassicGrotesquePro-Regular.ttf') format('truetype');
 	font-display: swap;
